# autonomous_vehicle

./: .gitignore
autonomous_vehicle/log/: latest_build
autonomous_vehicle/src/lidar/: CMakeLists.txt  package.xml
autonomous_vehicle/src/lidar/src/: scan_to_cloud_node.cpp  scan_to_cloud_node.hpp
autonomous_vehicle/src/my_package/: package.xml
autonomous_vehicle/src/my_robot_description/: CMakeLists.txt  package.xml
autonomous_vehicle/src/my_robot_description/config/: gazebo_control.yaml
autonomous_vehicle/src/my_robot_description/launch/: robot.launch.py
autonomous_vehicle/src/my_robot_description/urdf/: robot.ros2_control.xacro  robot.urdf.xacro
autonomous_vehicle/src/my_robot_description/worlds/: my_world.world
autonomous_vehicle/src/obstacle_mitigation/: CMakeLists.txt  package.xml
autonomous_vehicle/src/obstacle_mitigation/launch/: traffic.launch.py
autonomous_vehicle/src/obstacle_mitigation/src/: obstacle_mitigation_node.cpp
